   write 8-bit or floating point samples from a scalar or array
   reference.  This adds i_psamp() and i_psampf() to the C level API.

 - the XS interfaces to i_gsamp(), i_gsampf() and i_gsamp_bits() have
   changed to make better use of the typemap, but these aren't part of
   the perl level API anyway.  There were no changes to the C level
   interfaces to these functions.

Bug fixes:

 - correctly calculate the size of a rotated image
   https://rt.cpan.org/Ticket/Display.html?id=69261

 - fix incorrect rounding of color values for matrix_transform() and
   rotate().
   https://rt.cpan.org/Ticket/Display.html?id=69261

 - Win32 text output is now done in normal combine mode, the alpha
   component of the color is now significant.
   https://rt.cpan.org/Ticket/Display.html?id=70014

 - remove long unused gif case from read()
   https://rt.cpan.org/Ticket/Display.html?id=69244 (partial)

 - the getsamples() target parameter was being treated as a hashref
   when it's meant to be an array reference.
   https://rt.cpan.org/Ticket/Display.html?id=74882

Imager 0.87 - 03 Jan 2012
===========

 - document the return value of the filter() method.
   https://rt.cpan.org/Ticket/Display.html?id=72369

 - document i_gsamp_bits() and i_psamp_bits().
   https://rt.cpan.org/Ticket/Display.html?id=68815

 - properly increment the Imager::Matrix2d $VERSION.

 - actually include the Imager::Test tests in the dist

 - correctly read and write 256x256 pixel ICO files
   https://rt.cpan.org/Ticket/Display.html?id=69599

 - make the error message from read() or read_multi() when they can't
   identify the file type match reality.
   https://rt.cpan.org/Ticket/Display.html?id=72475

 - read() now uses $FORMATGUESS if it can't determine the file type
   based on the file header, to match read_multi().

 - re-work and add tests for def_guess_type().  def_guess_type() no
   longer returns any random file extension as the file type.
